Se modifican varios tipos de datos