@@ -2,6 +2,7 @@ package archivo;
 
 import static org.junit.jupiter.api.Assertions.*;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -14,7 +15,7 @@ import model.PromocionPorcentaje;
 import tipo.TipoAtraccion;
 
 class ArchivoPaqueteTest {
-	private static final List<Atraccion> EXPECTED_ATRACCIONES = List.of( 
+	private static final List<Atraccion> EXPECTED_ATRACCIONES = Arrays.asList(
 			new Atraccion("Moria", 10, 2, 6, TipoAtraccion.AVENTURA), 
 			new Atraccion("Minas Tirith", 5, (float) 2.5, 25, TipoAtraccion.PAISAJE),
 			new Atraccion("La Comarca", 3, (float) 6.5, 150, TipoAtraccion.DEGUSTACION),
@@ -24,10 +25,10 @@ class ArchivoPaqueteTest {
 	        new Atraccion("Erebor", 12, 3, 32, TipoAtraccion.PAISAJE),
 	        new Atraccion("Bosque Negro", 3, 4, 12, TipoAtraccion.AVENTURA));
 	
-	private static final List<Paquete> EXPECTED_PAQUETES = List.of(
+	private static final List<Paquete> EXPECTED_PAQUETES = Arrays.asList(
 			new Paquete(
 					TipoAtraccion.AVENTURA, 
-					List.of(
+					Arrays.asList(
 							new Atraccion("Bosque Negro", 3, 4, 12, TipoAtraccion.AVENTURA),
 							new Atraccion("Mordor", 25, 3, 4, TipoAtraccion.AVENTURA)
 							),
@@ -36,7 +37,7 @@ class ArchivoPaqueteTest {
 			
 			new Paquete(
 					TipoAtraccion.DEGUSTACION, 
-					List.of(
+					Arrays.asList(
 							new Atraccion("Lothlorien", 35, 1, 30, TipoAtraccion.DEGUSTACION),
 							new Atraccion("La Comarca", 3, (float) 6.5, 150, TipoAtraccion.DEGUSTACION)
 							),
@@ -44,7 +45,7 @@ class ArchivoPaqueteTest {
 					),
 			new Paquete(
 					TipoAtraccion.PAISAJE, 
-					List.of(
+					Arrays.asList(
 							new Atraccion("Minas Tirith", 5, (float) 2.5, 25, TipoAtraccion.PAISAJE),
 							new Atraccion("Abismo de Helm", 5, 2, 15, TipoAtraccion.PAISAJE)
 							),
